# copier-uv-bleeding

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  copier.yml  mkdocs.yml  pyproject.toml
.beads/: daemon-error  issues.jsonl
.github/workflows/: ci.yml  release.yml
.perles/: config.yaml
docs/: generate.md  update.md  work.md
project/: .env.example.jinja  .envrc.jinja  .markdownlint.yaml  .pre-commit-config.yaml.jinja  CONTRIBUTING.md.jinja  Makefile.jinja  README.md.jinja  commitlint.config.js.jinja  duties.py.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if project_type == 'app' %}main.py{% endif %}.jinja
project/.github/: FUNDING.yml.jinja  dependabot.yml.jinja
project/.github/ISSUE_TEMPLATE/: 1-bug.md.jinja
project/.github/workflows/: ci.yml.jinja  release.yml.jinja
project/config/: bandit.toml.jinja  ruff.toml.jinja  ty.toml.jinja
project/config/vscode/: launch.json.jinja  tasks.json.jinja
project/docs/.overrides/partials/: comments.html.jinja
project/scripts/: gen_credits.py.jinja  make.py.jinja
project/src/{{python_package_import_name}}/: __init__.py.jinja
project/tests/: test_api.py.jinja
tests/: assert_generated_project_release_ci.sh  smoke_test.sh  test_funding.sh  test_licenses.py
