[project]
name = "copier-uv-bleeding"
version = "2.4.0"
description = "Copier template for Python projects managed by uv (bleeding edge fork)"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "copier",
    "copier-templates-extensions",
    "jinja2",
    "markdown-callouts",
    "mkdocs",
    "mkdocs-material",
    "poethepoet",
    "python-semantic-release>=10.5.2",
    "reuse",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "deps", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.poe.tasks]
setup = "uv sync"
format = "ruff format ."
docs = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy"
smoke-test = "bash tests/smoke_test.sh"
test = "bash tests/test_filenames.sh && bash tests/test_project.sh && .venv/bin/python tests/test_licenses.py"
release = "test -n \"${version}\" || { echo \"error: usage: poe release version=x.y.z\" >&2; exit 1; } && git add CHANGELOG.md && git commit -m \"chore: Prepare release ${version}\" && git tag -m \"\" -a ${version} && git push && git push --tags"
# GitHub utilities
releases = "gh release list --limit 10"
tags = "sh -c 'git fetch --tags && git tag --sort=-version:refname'"
runs = "gh run list --limit 10"
watch = "gh run watch"
