[project]
name = "copier-uv-bleeding"
version = "0.2.0"
description = "Copier template for Python projects managed by uv (bleeding edge fork)"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "copier",
    "copier-templates-extensions",
    "jinja2",
    "markdown-callouts",
    "mkdocs",
    "mkdocs-material",
    "poethepoet",
    "python-semantic-release>=10.5.2",
    "reuse",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
tag_format = "{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "deps", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.poe.tasks]
# Setup
setup = "uv sync"

# Quality (template repo only has ruff)
format = "ruff format ."
lint = "ruff check ."
fix = ["lint --fix", "format"]

# Template tests
test = "bash tests/smoke_test.sh"

# Documentation
docs = "mkdocs serve"
docs-build = "mkdocs build -s"
docs-deploy = "mkdocs gh-deploy"

# GitHub utilities
releases = "gh release list --limit 10"
tags = "sh -c 'git fetch --tags && git tag --sort=-version:refname'"
runs = "gh run list --limit 10"
watch = "gh run watch"